# missing_people_report_standarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  migracion_emergencia.sql  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCH.md
scripts/: check.sh  curate_demo.py  extract_samples.py  identify_demo.py  init_db.py  up.sh  upload_demo.py  verify_03_06.py
src/facefinder/: main.py
src/facefinder/api/: auth.py  dashboard.py  deps.py  faces.py  identify.py  images.py  persons.py  users.py
src/facefinder/constants/: __init__.py  enums.py  settings.py  types.py
src/facefinder/data/: __init__.py
src/facefinder/data/db/: __init__.py  _base.py  comment.py  face.py  image.py  person.py  report.py  user.py
src/facefinder/domains/auth/: __init__.py  security.py  tokens.py
src/facefinder/domains/curation/: rules.py
src/facefinder/domains/ocr/: __init__.py  engine.py
src/facefinder/domains/recognition/: dedup.py  engine.py
src/facefinder/services/: auth.py  base.py  casefile.py  identify.py  ocr.py  upload.py
tests/: test_smoke.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/src/: api.js  main.jsx  styles.css
web/src/components/: AssignFace.jsx  FaceDetail.jsx  PersonForm.jsx  Review.jsx  ui.jsx
web/src/pages/: Account.jsx  Dashboard.jsx  Faces.jsx  Images.jsx  Login.jsx  People.jsx  Person.jsx  Users.jsx
